...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_examples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_margin_common_20"
        android:paddingBottom="@dimen/view_margin_common_20"
        android:orientation="vertical"
        tools:context=".maps.MapExamplesActivity">
...
                        android:textSize="@dimen/text_size"
                        android:lineSpacingExtra="@dimen/map_descr_line_spacing"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/try_it_layout_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_try_height"
                    android:layout_marginTop="@dimen/view_margin_common_5"
                    android:layout_marginBottom="@dimen/view_margin_common_10"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/button_primary"
...
